--- a/styles.css
+++ b/styles.css
@@ -6,8 +6,11 @@
 }
 
 body {
-    background: linear-gradient(135deg, #fde2c8, #e2c8fd, #c8fddc);
-    color: #333;
+    background-image: url('background.png');
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    margin: 0;
     line-height: 1.6;
 }
 
